@@ -6,7 +6,7 @@
  * redistribution, EXCEPT on the files which belong under the
  * Mozilla public license.
  *
- * $Id: jsUtils.c,v 1.12 2008/09/22 20:14:25 crc_canada Exp $
+ * $Id: jsUtils.c,v 1.13 2008/10/28 19:58:06 crc_canada Exp $
  *
  * A substantial amount of code has been adapted from js/src/js.c,
  * which is the sample application included with the javascript engine.
@@ -141,7 +141,12 @@ void JS_ECMA_TO_X3D(JSContext *cx, void *Data, unsigned datalen, int dataType, j
 			memcpy (Data, (void *) &dl, datalen);
 			break;
 		}
-		case FIELDTYPE_SFBool:
+		case FIELDTYPE_SFBool: {
+			il = JSVAL_TO_BOOLEAN (*newval);
+			memcpy (Data, (void *) &il, datalen);
+			break;
+		}
+
 		case FIELDTYPE_SFInt32: 	{ 
 			il = JSVAL_TO_INT (*newval);
 			memcpy (Data, (void *) &il, datalen);
